creating playlist and adding song pages working

--- a/final-project/src/main/resources/templates/add-playlist.html
+++ b/final-project/src/main/resources/templates/add-playlist.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8"/>
     <title>Title</title>
 </head>
 <body>
-    <h1>Playlist</h1>
+    <h3 th:text="${show.locationName}"></h3>
+    <h3 th:text="${show.locationAddress}"></h3>
+    <h3>Select A Playlist For This Show Or <a href="/api/create-playlist">Create A New Playlist</a></h3>
 </body>
 </html>
