--- a/final-project/src/main/resources/templates/login.html
+++ b/final-project/src/main/resources/templates/login.html
@@ -2,7 +2,9 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8"/>
+    <link  rel="stylesheet" href="main.css"/>
     <title>Login</title>
+
 </head>
 <body>
     <h1>Login</h1>
