a little css on shows page

--- a/final-project/src/main/resources/templates/artist-home.html
+++ b/final-project/src/main/resources/templates/artist-home.html
@@ -6,11 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Create A New Show</h1>
-    <form action="/api/create-show" method="post">
-        <input type="text" name="locationName" placeholder="Location Name"/>
-        <input type="text" name="locationAddress" placeholder="Location Address"/>
-        <button type="submit">Submit</button>
-    </form>
+<h1> Artist home page </h1>
+
 </body>
 </html>
