--- a/final-project/src/main/resources/templates/register.html
+++ b/final-project/src/main/resources/templates/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Artist Registration</title>
     <link rel="stylesheet" type="text/css" href="./static/main.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"/>
 </head>
 <body>
     <h1>Artist Registration</h1>
