--- a/final-project/src/main/resources/templates/song-queue.html
+++ b/final-project/src/main/resources/templates/song-queue.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Title</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"/>
 </head>
 <body>
 <h1> song queue </h1>
-
-<div th:each="songs: ${songs}" >
-    <p th:text="${songs.originalArtist}"></p>
-    <p th:text="${songs.songName}" > </p>
-    <p th:text="${songs.genre}" > </p>
-
-</div>
-
+<table class="table table-hover table-inverse">
+    <thead>
+    <tr>
+        <th>original Artist</th>
+        <th> song name</th>
+        <th> genre </th>
+    </tr>
+    </thead>
+    <div th:each="songs: ${songs}">
+            <tbody>
+            <tr>
+                <td th:text="${songs.originalArtist}" ></td>
+                <td  th:text="${songs.songName}"> </td>
+                <td th:text="${songs.genre}" ></td>
+            </tr>
+            </tbody>
+    </div>
+</table>
 </body>
 </html>
