--- a/final-project/src/main/resources/templates/login.html
+++ b/final-project/src/main/resources/templates/login.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Login</title>
+    <link rel="stylesheet" th:href="@{/main.css}"/>
 </head>
-<body>
-    <h1>Login</h1>
+<body class="body">
+    <h1 class="loginName">Login</h1>
     <p th:text="${error}"></p>
     <form action="/api/artist/login" method="post">
         <input type="text" name="email" placeholder="email"/>
