--- a/final-project/src/main/resources/templates/view-shows.html
+++ b/final-project/src/main/resources/templates/view-shows.html
@@ -62,6 +62,11 @@
                 <button type="submit">Start Show</button>
             </form>
         </div>
+        <div class="edit-show">
+            <form th:action="@{'/api/' + ${show.showId} + '/edit-show'}" th:method="post">
+                <button type="submit">Edit Show</button>
+            </form>
+        </div>
     </div>
     <form action="/api/artist/logout" method="post">
         <button>Logout</button>
