--- a/final-project/src/main/resources/templates/create-show.html
+++ b/final-project/src/main/resources/templates/create-show.html
@@ -10,6 +10,8 @@
     <form action="/api/create-show" method="post">
         <input type="text" name="locationName" placeholder="Location Name"/>
         <input type="text" name="locationAddress" placeholder="Location Address"/>
+        <input type="text" name="startTime" placeholder="dd/MM/yyyy hh:mm:ss"  />
+        <input type="text" name="endTime" placeholder="dd/MM/yyyy hh:mm:ss"  />
         <button type="submit">Submit</button>
     </form>
 </body>
