--- a/final-project/src/main/resources/templates/view-playlist.html
+++ b/final-project/src/main/resources/templates/view-playlist.html
@@ -11,10 +11,10 @@
     <nav>
         <div class="tags" >
             <div class="showCreateTag">
-                <a href="create-show" > Create a new Show  </a>
+                <a th:href="@{/api/create-show}" > Create a new Show  </a>
             </div>
             <div class="playlistCreateTag">
-                <a href="create-playlist" > Create a new Playlist  </a>
+                <a th:href="@{/api/create-playlist}" > Create a new Playlist  </a>
             </div>
             <div>
                 <a th:href="@{/api/view-shows}" > view Shows  </a>
