--- a/final-project/src/main/resources/static/view-shows.css
+++ b/final-project/src/main/resources/static/view-shows.css
@@ -1,24 +1,54 @@
+html {
+    height: 100%;
+    margin: 0px;
+}
 
+.view-shows-body {
+    background: url("./img/guitar-amp-3.jpg");
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /*width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: .2;
+    margin: 0px;*/
+}
+
+/*.background-cover {
+    background-color: grey;
+    opacity: .8;
+    height: 100%;
+    margin: 0px;
+}*/
 
 .showContainer{
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .allShows{
-    display: flex;
-    border: 1px solid grey;
-    margin: 10px;
-    width: 45%;
-    height: 5%;
-    /*background-color: lightgray;*/
-    /*background-image: url("./img/pexels-photo-164879.jpeg");*/
-    background-size: contain;
-    background-repeat: no-repeat;
-    box-shadow: 4px 7px 12px 0px rgba(0,0,0,0.75);
-
-
+               display: flex;
+               border: 1px solid white;
+               margin: 10px;
+               width: 50%;
+               max-width: 600px;
+               min-width: 536px;
+               height: 5%;
+               background-color: rgba(0, 0, 0, 0.8);
+               /* background-image: url(./img/pexels-photo-164879.jpeg); */
+               background-size: contain;
+               background-repeat: no-repeat;
+               box-shadow: 4px 7px 12px 0px rgba(0,0,0,0.75);
+               justify-content: center;
+               padding-top: 2%;
+               padding-bottom: 2%;
+               /* opacity: .8; */
+               flex-direction: column;
+               border-radius: 15px;
 }
 
 .showInfo p{
@@ -26,17 +56,23 @@
 }
 
 .showInfo{
-    width: 100%;
-    justify-content: center;
-    display:flex;
+            width: 90%;
+            justify-content: center;
+            display: flex;
+            background-color: floralwhite;
+            opacity: unset;
+            border: 1px solid black;
+            margin-left: 5%;
 }
 
 .info-container {
-    display: flex;
+display: flex;
+    box-shadow: 3px 7px 35px 0px rgba(250,245,250,1);
 }
 
 .show-info-playlist {
     flex-basis: 20%;
+    min-width: 148px;
 }
 
 .info-artist-location {
@@ -96,11 +132,12 @@
 }
 
 .barcode {
-    flex-basis: 20%;
-    background-image: url("./img/barcode.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+        flex-basis: 20%;
+        background-image: url(./img/barcode.jpg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-left: 2%;
 }
 
 .barcode p {
@@ -116,7 +153,6 @@
     margin-top: 8%;
     background-color: red;
     color: white;
-    font-size: 90%;
     opacity: .7;
 }
 
@@ -126,5 +162,16 @@
 
 #artist-name {
     font-size: 140%;
+}
+
+.view-shows-h1 {
+    text-align: center;
+}
+
+.button-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        margin-top: 2%;
 }
 
