styled login and register pages

--- a/final-project/src/main/resources/templates/create-show.html
+++ b/final-project/src/main/resources/templates/create-show.html
@@ -10,8 +10,9 @@
     <form action="/api/create-show" method="post">
         <input type="text" name="locationName" placeholder="Location Name"/>
         <input type="text" name="locationAddress" placeholder="Location Address"/>
-        <input type="text" name="startTime" placeholder="dd/MM/yyyy hh:mm:ss"  />
-        <input type="text" name="endTime" placeholder="dd/MM/yyyy hh:mm:ss"  />
+        <input type="text" name="date" placeholder="dd/MM/yyyy"/>
+        <input type="text" name="startTime" placeholder="hh:mm:ss"/>
+        <input type="text" name="endTime" placeholder="hh:mm:ss"/>
         <button type="submit">Submit</button>
     </form>
 </body>
