--- a/final-project/src/main/resources/static/login.css
+++ b/final-project/src/main/resources/static/login.css
@@ -3,35 +3,127 @@ html {
     height: 100%;
     margin: 0;
 }
-body {
+login-body {
     min-height: 100%;
     margin: 0;
 }
 
 
-.body{
+.login-body{
+    background: url("./img/drums.jpg");
+    background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
+    color: white;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    margin: 10%;
-    border: 1px solid black;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
+
+.loginName {
+    text-align: center;
+}
+
+.registerName {
+    text-align: center;
+    margin-bottom: 10%;
+}
+
 .login{
     display: flex;
-    flex-basis: 45%;
+    flex-basis: 50%;
     height: 100%;
+    width: 100%;
     align-items: center;
+    justify-content: center;
+}
+
+.login-form {
+    display: flex;
+        flex-direction: column;
+        color: black;
+        margin-top: 10%;
+        width: 30%;
+        box-shadow: 3px 7px 35px 0px rgba(250,245,250,.5);
+}
+
+.register-form {
+    display: flex;
+    flex-direction: column;
+    color: black;
+    width: 30%;
+    box-shadow: 3px 7px 35px 0px rgba(250,245,250,.5);
+}
+
+.login-form input {
+        margin: 5%;
+        /* border-radius: 25px; */
+        border: none;
+        line-height: 250%;
+        background-color: rgba(250,245,250, 0);
+        border-bottom: 1px solid white;
+        color: white;
+}
+
+.login-form input:focus {
+    outline: none;
+}
+
+.login-form button {
+    margin: 5%;
+    border-radius: 25px;
+    border: 1px solid white;
+    line-height:250%;
+    color: white;
+}
+
+.register-form input {
+        margin: 5%;
+        /* border-radius: 25px; */
+        border: none;
+        line-height: 250%;
+        background-color: rgba(250,245,250, 0);
+        border-bottom: 1px solid white;
+        color: white;
+}
+
+.register-form input:focus {
+    outline: none;
+}
+
+.register-form button {
+    margin: 5%;
+    border-radius: 25px;
+    border: 1px solid white;
+    line-height:250%;
+    color: white;
 }
 
 .img{
     display: flex;
-    flex-basis: 45%;
+    flex-basis: 50%;
     height: 100%;
     align-items: center;
+}
+
+.link-container {
+    display: flex;
+    margin: 5%;
+}
+
+.links {
+    color: white;
+    margin: 5%;
+    margin-left: 0px;
+}
+
+.links:hover {
+    color: white;
 }
 
