--- a/final-project/src/main/resources/static/view-shows.css
+++ b/final-project/src/main/resources/static/view-shows.css
@@ -9,6 +9,7 @@ html {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     /*width: 100%;
     height: 100%;
     z-index: -1;
@@ -103,13 +104,17 @@ display: flex;
 }
 
 .navBar{
-    margin-top: 10px;
-    background-color: black;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    margin-top:17px;
-    margin-bottom: 15px;
+   background-color: black;
+   height: 70px;
+   display: flex;
+   align-items: center;
+   margin-top: 17px;
+   margin-bottom: 15px;
+   width: 100%;
+   position: fixed;
+   margin-top: 0px;
+   top: 0px;
+   z-index: 1;
 }
 
 .tags {
@@ -166,6 +171,7 @@ display: flex;
 
 .view-shows-h1 {
     text-align: center;
+    margin-top: 8%;
 }
 
 .button-container {
