--- a/final-project/src/main/resources/templates/login.html
+++ b/final-project/src/main/resources/templates/login.html
@@ -6,20 +6,21 @@
     <link  rel="stylesheet" th:href="@{/login.css}"/>
     <title>Login</title>
 </head>
-<body class="body">
-<div class="container" >
-    <div class="img">
-        <p>Create a new artist account</p>
+<body class="login-body">
+    <div class="container" >
+        <h1 class="loginName">Welcome</h1>
+        <div class="login">
+            <p th:text="${error}"></p>
+            <form class="login-form" action="/api/artist/login" method="post">
+                <div class="link-container">
+                    <a class="links" href="#">Login</a>
+                    <a class="links" href="/api/artist/register">Register</a>
+                </div>
+                <input type="text" name="email" placeholder="email"/>
+                <input type="password" name="password" placeholder="password"/>
+                <button  class="btn btn-outline-dark">Login</button>
+            </form>
+        </div>
     </div>
-    <div class="login">
-    <h1 class="loginName">Login</h1>
-    <p th:text="${error}"></p>
-    <form action="/api/artist/login" method="post">
-        <input type="text" name="email" placeholder="email"/>
-        <input type="password" name="password" placeholder="password"/>
-        <button>Submit</button>
-    </form>
-    </div>
-</div>
 </body>
 </html>
