--- a/final-project/src/main/resources/templates/create-show.html
+++ b/final-project/src/main/resources/templates/create-show.html
@@ -4,7 +4,38 @@
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"/>
     <link rel="stylesheet" th:href="@{/create-show.css}"/>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" />
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css"/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="dist/bootstrap-clockpicker.min.css"/>
+    <script type="text/javascript" src="dist/bootstrap-clockpicker.min.js"></script>
     <title>Title</title>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+
+        $(function () {
+            $("#datepicker").datepicker();
+        });
+
+        /*]]>*/
+    </script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+
+        $(".clockpicker").clockpicker({
+            timeFormat: 'HH:mm:ss',
+            dropdown: true,
+            scrollbar: true
+        });
+
+        /*]]>*/
+    </script>
+
 </head>
 <body>
     <div class="navBar" >
@@ -28,8 +59,9 @@
             <form class="form" action="/api/create-show" method="post">
                 <input class="glylphicon glyphicon-home" type="text" name="locationName" placeholder="Location Name"/>
                 <input class="glylphicon glyphicon-home" type="text" name="locationAddress" placeholder="Location Address"/>
-                <input type="text" name="startTime" placeholder="dd/MM/yyyy hh:mm:ss"/>
-                <input type="text" name="endTime" placeholder="dd/MM/yyyy hh:mm:ss"/>
+                <input type="text" name="date" id="datepicker" placeholder="date" />
+                <input type="text" name="startTime" class="clockpicker" placeholder="start time"/>
+                <input type="text" name="endTime" class="clockpicker" placeholder="end time"/>
                 <button class="btn btn-outline-dark" type="submit">Submit</button>
             </form>
         </div>
