--- a/final-project/src/main/resources/templates/view-shows.html
+++ b/final-project/src/main/resources/templates/view-shows.html
@@ -20,7 +20,7 @@
             </div>
         </nav>
     </div>
-    <h1 class="view-shows-h1">shows page</h1>
+    <h1 class="view-shows-h1">Your Shows</h1>
     <div class="showContainer" th:each="show : ${allShows}">
         <div class="allShows" >
             <div class="showInfo" >
