--- a/final-project/src/main/resources/templates/add-playlist.html
+++ b/final-project/src/main/resources/templates/add-playlist.html
@@ -11,8 +11,8 @@
     <div class="show-info">
         <h3 th:text="${show.locationName}"></h3>
         <h3 th:text="${show.locationAddress}"></h3>
-        <h3 th:text="${show.startTime}"></h3>
-        <h3 th:text="${show.endTime}"></h3>
+        <h3 th:text="${startTime}"></h3>
+        <h3 th:text="${endTime}"></h3>
     </div>
     <div class="button-container" >
         <div class="buttons">
